# azure-weather-streaming

./: .gitignore  ETL_notebook.ipynb  Makefile  README.md  pyproject.toml  weather_api_structure.json  work_notebook.ipynb
images/: azure-weather-design.excalidraw
weather_producer/: Dockerfile  generate_weather_messages.py  requirements.txt
